@@ -12,7 +12,7 @@ my @actual;
 $first->distinct->each(sub {
 	push @actual, $_;
 });
-$first->emit($_) for 1,2,undef,undef,3,undef,4,undef,5,6,undef,undef,8,8,8,undef,8,7;
-cmp_deeply(\@actual, [ 1,2,undef,3,undef,4,undef,5,6,undef,8,undef,8,7 ], 'distinct operation was performed');
+$first->emit($_) for 1,2,undef,3,undef,1,2,1,1,1,2,1,5,6,undef,undef,8,8,8,undef,8,7;
+cmp_deeply(\@actual, [ 1,2,undef,3,5,6,8,7 ], 'distinct operation was performed');
 done_testing;
 
